Finalize Slide 7 header sizes and Slide 8 pricing table styles

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -436,11 +436,12 @@
             </section>
 
             <!-- 7. Cost Structure Slide (Problem Area fixed) -->
+            <!-- 7. Cost Structure Slide (Problem Area fixed) -->
             <section>
-                <h2>5. なぜ、この価格で実現できるのか？</h2>
+                <h2 style="font-size: 1.3em !important;">5. なぜ、この価格で実現できるのか？</h2>
                 <div class="cols dense-text">
                     <div class="col-6">
-                        <h3 style="font-size: 0.95em !important; white-space: nowrap;">一般的な制作会社 (相場: 50万〜)</h3>
+                        <h3 style="font-size: 0.8em !important; white-space: nowrap;">一般的な制作会社 (相場: 50万〜)</h3>
                         <ul style="color:#666; font-size: 0.9em !important;">
                             <li>機材費・減価償却費</li>
                             <li>スタジオ使用料</li>
@@ -449,7 +450,7 @@
                         </ul>
                     </div>
                     <div class="col-6">
-                        <h3 style="font-size: 0.95em !important; white-space: nowrap;">本プロジェクト (ご提案)</h3>
+                        <h3 style="font-size: 0.8em !important; white-space: nowrap;">本プロジェクト (ご提案)</h3>
                         <ul style="font-weight:bold; font-size: 0.9em !important;">
                             <li>機材費 0円 <span style="font-weight:normal; font-size:0.8em;">(iPhone + 自然光)</span></li>
                             <li>スタジオ費 0円 <span style="font-weight:normal; font-size:0.8em;">(店舗活用)</span></li>
@@ -476,11 +477,11 @@
             <section>
                 <h2>6. プラン・費用のご提案</h2>
                 <table style="margin-top:20px;">
-                    <tr style="background:#333; color:#fff;">
-                        <th style="width:20%; color:#fff;">Plan</th>
-                        <th style="width:40%; color:#fff;">Content (Deliverables)</th>
-                        <th style="width:20%; color:#fff;">Price</th>
-                        <th style="width:20%; color:#fff;">Note</th>
+                    <tr style="background:#eee; color:#000;">
+                        <th style="width:20%; color:#000;">Plan</th>
+                        <th style="width:40%; color:#000;">Content (Deliverables)</th>
+                        <th style="width:20%; color:#000;">Price</th>
+                        <th style="width:20%; color:#000;">Note</th>
                     </tr>
                     <tr>
                         <td><strong>Standard</strong><br>(標準プラン)</td>
@@ -513,11 +514,13 @@
                             </ul>
                         </td>
                         <td><strong>¥100,000</strong><br><span style="font-size:0.7em">(税抜)</span></td>
-                        <td>△<br><span style="font-size:0.6em">まずは試したい方向け</span></td>
+                        <td></td>
                     </tr>
                 </table>
                 <p style="margin-top:10px; font-size:0.7em !important; color:#666;">※契約期間:
-                    3ヶ月〜（初期のアカウント設計・学習期間が必要なため）<br>※撮影は貴社ご協力（iPhone）または、私が訪問時にまとめて実施（交通費込み）のハイブリッド形式です。</p>
+                    3ヶ月〜（初期のアカウント設計・学習期間が必要なため）<br>
+                    ※撮影は全てこちらで実施します。（iPhone 16 Pro使用、交通費込み）
+                </p>
                 <!-- Updated transportation -->
                 <div class="slide-number">8 / 9</div>
             </section>
