Vertically center Slide 4 content

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -340,7 +340,7 @@
             </section>
 
             <!-- 4. KPI Roadmap -->
-            <section>
+            <section style="display: flex; flex-direction: column; justify-content: center; height: 100%;">
                 <h2>2. 3ヶ月成長シミュレーション</h2>
                 <p>フェーズごとに明確なKPIを設定し、段階的にEC売上へ繋げます。</p>
                 <table style="margin-top:20px; border: 2px solid #aaa;">
