Replace half-width parentheses with full-width to prevent overlap

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -441,7 +441,7 @@
                 <h2 style="font-size: 1.3em !important;">5. なぜ、この価格で実現できるのか？</h2>
                 <div class="cols dense-text">
                     <div class="col-6">
-                        <h3 style="font-size: 0.8em !important; white-space: nowrap;">一般的な制作会社 (相場: 50万〜)</h3>
+                        <h3 style="font-size: 0.8em !important; white-space: nowrap;">一般的な制作会社（相場：50万〜）</h3>
                         <ul style="color:#666; font-size: 0.9em !important;">
                             <li>機材費・減価償却費</li>
                             <li>スタジオ使用料</li>
@@ -450,12 +450,12 @@
                         </ul>
                     </div>
                     <div class="col-6">
-                        <h3 style="font-size: 0.8em !important; white-space: nowrap;">本プロジェクト (ご提案)</h3>
+                        <h3 style="font-size: 0.8em !important; white-space: nowrap;">本プロジェクト（ご提案）</h3>
                         <ul style="font-weight:bold; font-size: 0.9em !important;">
-                            <li>機材費 0円 <span style="font-weight:normal; font-size:0.8em;">(iPhone + 自然光)</span></li>
-                            <li>スタジオ費 0円 <span style="font-weight:normal; font-size:0.8em;">(店舗活用)</span></li>
-                            <li>人件費 最小限 <span style="font-weight:normal; font-size:0.8em;">(撮影・編集を一気通貫)</span></li>
-                            <li><strong>代理店マージン 0円 (直接契約)</strong></li>
+                            <li>機材費 0円 <span style="font-weight:normal; font-size:0.8em;">（iPhone + 自然光）</span></li>
+                            <li>スタジオ費 0円 <span style="font-weight:normal; font-size:0.8em;">（店舗活用）</span></li>
+                            <li>人件費 最小限 <span style="font-weight:normal; font-size:0.8em;">（撮影・編集を一気通貫）</span></li>
+                            <li><strong>代理店マージン 0円（直接契約）</strong></li>
                         </ul>
                     </div>
                 </div>
@@ -484,7 +484,7 @@
                         <th style="width:20%; color:#000;">Note</th>
                     </tr>
                     <tr>
-                        <td><strong>Standard</strong><br>(標準プラン)</td>
+                        <td><strong>Standard</strong><br>（標準プラン）</td>
                         <td style="font-size: 0.9em;">
                             <ul>
                                 <li><strong>月8本投稿 (週2回)</strong></li>
@@ -500,12 +500,12 @@
                                 分析・管理: ¥20,000
                             </div>
                         </td>
-                        <td><strong>¥150,000</strong><br><span style="font-size:0.7em">(税抜・要相談)</span></td>
+                        <td><strong>¥150,000</strong><br><span style="font-size:0.7em">（税抜・要相談）</span></td>
                         <!-- Updated price -->
                         <td><strong>◎ 推奨</strong><br><span style="font-size:0.6em">もっとも費用対効果が高い構成です</span></td>
                     </tr>
                     <tr>
-                        <td><strong>Light</strong><br>(お試しプラン)</td>
+                        <td><strong>Light</strong><br>（お試しプラン）</td>
                         <td style="font-size: 0.9em;">
                             <ul>
                                 <li>月4本投稿 (週1回)</li>
@@ -513,7 +513,7 @@
                                 <li>簡易レポート</li>
                             </ul>
                         </td>
-                        <td><strong>¥100,000</strong><br><span style="font-size:0.7em">(税抜)</span></td>
+                        <td><strong>¥100,000</strong><br><span style="font-size:0.7em">（税抜）</span></td>
                         <td></td>
                     </tr>
                 </table>
