Remove 3-month contract duration constraint

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -517,8 +517,7 @@
                         <td></td>
                     </tr>
                 </table>
-                <p style="margin-top:10px; font-size:0.7em !important; color:#666;">※契約期間:
-                    3ヶ月〜（初期のアカウント設計・学習期間が必要なため）<br>
+                <p style="margin-top:10px; font-size:0.7em !important; color:#666;">
                     ※撮影は全てこちらで実施します。（iPhone 16 Pro使用、交通費込み）
                 </p>
                 <!-- Updated transportation -->
