Update Slide 7 message text

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -465,7 +465,7 @@
                     <p style="font-size:0.85em !important; line-height: 1.6 !important; margin: 0;">
                         <!-- Smaller font, tighter line-height, remove margin -->
                         <strong>Message:</strong><br>
-                        「機材」にお金をかける時代は終わりました。<br>
+                        「機材」にお金をかけるのではなく、<br>
                         浮いた予算は、広告費や商品の仕入れに回し、<br>
                         <strong>お客様への還元（より良い体験）</strong>に使ってください。
                     </p>
