--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -111,7 +111,12 @@
                 <p id="modalDesc" class="card-desc" style="font-size: 1.1rem; margin-top: 1rem;"></p>
 
                 <div class="prompt-box">
-                    <div class="prompt-label">AI Prompt</div>
+                    <div
+                        style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem;">
+                        <div class="prompt-label" style="margin-bottom: 0;">AI Prompt</div>
+                        <button onclick="copyPrompt()" class="filter-btn"
+                            style="padding: 0.3rem 0.8rem; font-size: 0.7rem;">Copy</button>
+                    </div>
                     <div id="modalPrompt" class="prompt-text"></div>
                 </div>
 
