Add Autumn Watercolor to portfolio

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -78,13 +78,23 @@
                 </div>
             </div>
 
-            <!-- Card 3: Watercolor -->
+            <!-- Card 3: Watercolor Spring -->
             <div class="card" data-category="watercolor" onclick="openModal('watercolor')">
                 <img src="img/watercolor.png" alt="Watercolor Style Japanese House">
                 <div class="card-info">
                     <span class="card-tag">Watercolor</span>
                     <h2 class="card-title">春の縁側</h2>
                     <p class="card-desc">繊細な水彩タッチで描く、静かな四季。</p>
+                </div>
+            </div>
+
+            <!-- Card 3b: Watercolor Autumn -->
+            <div class="card" data-category="watercolor" onclick="openModal('watercolor_autumn')">
+                <img src="img/watercolor_autumn.jpg" alt="Watercolor Autumn">
+                <div class="card-info">
+                    <span class="card-tag">Watercolor</span>
+                    <h2 class="card-title">秋の錦鯉</h2>
+                    <p class="card-desc">紅葉と石橋が織りなす、秋の静寂。</p>
                 </div>
             </div>
 
