Finalize SF Movie section in Nist AI portfolio

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -98,12 +98,23 @@
                 </div>
             </div>
 
-            <!-- Placeholder for SF -->
-            <div class="card" data-category="sf" style="display: none;">
+            <!-- Card 4: SF City -->
+            <div class="card" data-category="sf" onclick="openModal('sf_city')">
+                <img src="img/sf_city.png" alt="SF City">
                 <div class="card-info">
                     <span class="card-tag">SF Movie</span>
-                    <h2 class="card-title">Coming Soon</h2>
-                    <p class="card-desc">SF映画風のイメージを追加予定です。</p>
+                    <h2 class="card-title">不夜城の鼓動</h2>
+                    <p class="card-desc">雨に濡れる未来都市の断片。</p>
+                </div>
+            </div>
+
+            <!-- Card 4b: SF Planet -->
+            <div class="card" data-category="sf" onclick="openModal('sf_planet')">
+                <img src="img/sf_planet.png" alt="SF Planet">
+                <div class="card-info">
+                    <span class="card-tag">SF Movie</span>
+                    <h2 class="card-title">未知の境界線</h2>
+                    <p class="card-desc">静寂に包まれた、異星の地平。</p>
                 </div>
             </div>
         </div>
