Complete snapshots and SF themes for Nist AI

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -78,6 +78,36 @@
                 </div>
             </div>
 
+            <!-- Card 2c: Photo street -->
+            <div class="card" data-category="photo" onclick="openModal('photo_street_snap')">
+                <img src="img/photo_street_snap.jpg" alt="Photo Street Snap">
+                <div class="card-info">
+                    <span class="card-tag">Photography</span>
+                    <h2 class="card-title">雨上がりの静寂</h2>
+                    <p class="card-desc">日常を切り取ったスナップ写真。</p>
+                </div>
+            </div>
+
+            <!-- Card 2d: Photo ramen -->
+            <div class="card" data-category="photo" onclick="openModal('photo_ramen')">
+                <img src="img/photo_ramen.jpg" alt="Photo Ramen">
+                <div class="card-info">
+                    <span class="card-tag">Photography</span>
+                    <h2 class="card-title">立ち上る湯気</h2>
+                    <p class="card-desc">素材の質感に迫る、生活の温度。</p>
+                </div>
+            </div>
+
+            <!-- Card 2e: Photo bench -->
+            <div class="card" data-category="photo" onclick="openModal('photo_bench')">
+                <img src="img/photo_bench.jpg" alt="Photo Bench">
+                <div class="card-info">
+                    <span class="card-tag">Photography</span>
+                    <h2 class="card-title">夕暮れの追憶</h2>
+                    <p class="card-desc">フィルムが捉えた、黄金の瞬間。</p>
+                </div>
+            </div>
+
             <!-- Card 3: Watercolor Spring -->
             <div class="card" data-category="watercolor" onclick="openModal('watercolor')">
                 <img src="img/watercolor.png" alt="Watercolor Style Japanese House">
