--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -161,6 +161,12 @@
                 <h2 id="modalTitle" class="card-title" style="font-size: 2rem;"></h2>
                 <p id="modalDesc" class="card-desc" style="font-size: 1.1rem; margin-top: 1rem;"></p>
 
+                <div class="use-case-box"
+                    style="margin-top: 1.5rem; padding: 1rem; background: rgba(255, 255, 255, 0.05); border-radius: 8px;">
+                    <div class="prompt-label" style="color: var(--accent-color); margin-bottom: 0.5rem;">活用シーン例</div>
+                    <p id="modalUseCase" style="font-size: 0.95rem; line-height: 1.6; color: #ddd;"></p>
+                </div>
+
                 <div class="prompt-box">
                     <div
                         style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem;">
