Complete all image cards and details for Nist AI

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -108,6 +108,36 @@
                 </div>
             </div>
 
+            <!-- Card 2f: Photo woman 1 -->
+            <div class="card" data-category="photo" onclick="openModal('photo_woman_1')">
+                <img src="img/photo_woman_1.jpg" alt="Photo Woman 1">
+                <div class="card-info">
+                    <span class="card-tag">Photography</span>
+                    <h2 class="card-title">窓辺の光と透明感</h2>
+                    <p class="card-desc">朝の光が描く、柔らかなポートレート。</p>
+                </div>
+            </div>
+
+            <!-- Card 2g: Photo woman 2 -->
+            <div class="card" data-category="photo" onclick="openModal('photo_woman_2')">
+                <img src="img/photo_woman_2.jpg" alt="Photo Woman 2">
+                <div class="card-info">
+                    <span class="card-tag">Photography</span>
+                    <h2 class="card-title">渋谷の鼓動</h2>
+                    <p class="card-desc">フラッシュが捉えた、都会のリアリティ。</p>
+                </div>
+            </div>
+
+            <!-- Card 2h: Photo woman 3 -->
+            <div class="card" data-category="photo" onclick="openModal('photo_woman_3')">
+                <img src="img/photo_woman_3.jpg" alt="Photo Woman 3">
+                <div class="card-info">
+                    <span class="card-tag">Photography</span>
+                    <h2 class="card-title">雨音とモノクローム</h2>
+                    <p class="card-desc">陰影が語る、静寂のポートレート。</p>
+                </div>
+            </div>
+
             <!-- Card 3: Watercolor Spring -->
             <div class="card" data-category="watercolor" onclick="openModal('watercolor')">
                 <img src="img/watercolor.png" alt="Watercolor Style Japanese House">
