Fix image paths in index.html and add ID badges to cards

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -84,6 +84,7 @@
                 <img src="img/nayuta_fashion.png" alt="Nayuta Fashion">
                 <div class="card-info">
                     <span class="card-tag">Nayuta / Fashion</span>
+                    <span class="card-id">#NST-019</span>
                     <h2 class="card-title">都市とスタイル</h2>
                     <p class="card-desc">洗練されたストリートファッション。</p>
                 </div>
@@ -91,9 +92,10 @@
 
             <!-- Card: Nayuta Young Casual -->
             <div class="card" data-category="nayuta photo" onclick="openModal('nayuta_young_casual')">
-                <img src="https://placehold.co/600x400/161b22/fcc800?text=Young+Casual" alt="Nayuta Young Casual">
+                <img src="img/nayuta_young_casual.png" alt="Nayuta Young Casual">
                 <div class="card-info">
                     <span class="card-tag">Nayuta / Young</span>
+                    <span class="card-id">#NST-020</span>
                     <h2 class="card-title">休日のストリート</h2>
                     <p class="card-desc">若々しさとリラックスした空気感。</p>
                 </div>
@@ -101,9 +103,10 @@
 
             <!-- Card: Nayuta Young Student -->
             <div class="card" data-category="nayuta photo" onclick="openModal('nayuta_young_student')">
-                <img src="https://placehold.co/600x400/161b22/fcc800?text=Young+Student" alt="Nayuta Young Student">
+                <img src="img/nayuta_young_student.png" alt="Nayuta Young Student">
                 <div class="card-info">
                     <span class="card-tag">Nayuta / Student</span>
+                    <span class="card-id">#NST-021</span>
                     <h2 class="card-title">知の探求</h2>
                     <p class="card-desc">真剣な眼差しで学ぶ学生の日常。</p>
                 </div>
@@ -111,9 +114,10 @@
 
             <!-- Card: Nayuta Young Creative -->
             <div class="card" data-category="nayuta photo" onclick="openModal('nayuta_young_creative')">
-                <img src="https://placehold.co/600x400/161b22/fcc800?text=Young+Creative" alt="Nayuta Young Creative">
+                <img src="img/nayuta_young_creative.png" alt="Nayuta Young Creative">
                 <div class="card-info">
                     <span class="card-tag">Nayuta / Creative</span>
+                    <span class="card-id">#NST-022</span>
                     <h2 class="card-title">クリエイティブ・マインド</h2>
                     <p class="card-desc">創造性を刺激する若きアーティスト。</p>
                 </div>
@@ -121,11 +125,45 @@
 
             <!-- Card: EC Product -->
             <div class="card" data-category="ec photo" onclick="openModal('ec_product')">
-                <img src="https://placehold.co/600x400/161b22/fcc800?text=EC+Product" alt="EC Product">
+                <img src="img/ec_product.png" alt="EC Product">
                 <div class="card-info">
                     <span class="card-tag">EC / Product</span>
+                    <span class="card-id">#NST-023</span>
                     <h2 class="card-title">プロダクトの輝き</h2>
                     <p class="card-desc">魅力を引き出す商品写真。</p>
+                </div>
+            </div>
+
+            <!-- Card: Food -->
+            <div class="card" data-category="food photo" onclick="openModal('food_restaurant')">
+                <img src="img/food_restaurant.png" alt="Food">
+                <div class="card-info">
+                    <span class="card-tag">Food</span>
+                    <span class="card-id">#NST-024</span>
+                    <h2 class="card-title">至福の一皿</h2>
+                    <p class="card-desc">食欲をそそるシズル感。</p>
+                </div>
+            </div>
+
+            <!-- Card: Music -->
+            <div class="card" data-category="music photo" onclick="openModal('music_vibe')">
+                <img src="img/music_vibe.png" alt="Music">
+                <div class="card-info">
+                    <span class="card-tag">Music</span>
+                    <span class="card-id">#NST-025</span>
+                    <h2 class="card-title">音の風景</h2>
+                    <p class="card-desc">熱気とバイブスを伝える。</p>
+                </div>
+            </div>
+
+            <!-- Card: Text Ad -->
+            <div class="card" data-category="ec photo" onclick="openModal('text_ad')">
+                <img src="img/text_ad.png" alt="Text Ad">
+                <div class="card-info">
+                    <span class="card-tag">Text Ad</span>
+                    <span class="card-id">#NST-026</span>
+                    <h2 class="card-title">メッセージを届ける</h2>
+                    <p class="card-desc">広告用ネガティブスペース。</p>
                 </div>
             </div>
 
